# TEDDecor

./: Assert_That.csv  Asserts.json  CHANGELOG.md  FEATURES.md  Notes.txt  README.md  TODO.md  dev_notes.md  is_fail.csv  pyproject.toml  test_tracing.py
docs/: search.js  teddecor.html
docs/teddecor/: Diagram.html  Document.html  Exceptions.html  TED.html  UnitTest.html  Util.html
docs/teddecor/TED/: TED.html  (+6 more)
examples/: example.py
examples/TED/: basics.py  example.py  newfeatures.py
examples/UnitTest/: example_everything.py  overview.py
teddecor/: __init__.py  pprint.py
teddecor/Diagram/: graph.py  objects.py
teddecor/Document/: Results.py  Testing.py  __init__.py  builder.py  exceptions.py  objects.py  parser.py  test_colors.py
teddecor/Exceptions/: __init__.py  base.py
teddecor/Logger/: __init__.py  log.py
teddecor/TED/: TED.py  __init__.py  colors.py  exception.py  formatting.py  markup.py  parser.py  tokens.py
teddecor/UnitTest/: Asserts.py  Objects.py  Results.py  TEDTest.py  TestSuite.py  Testing.py  __init__.py  asserts.py  cmd.py  sample_test_file.py
teddecor/Util/: __init__.py
teddecor/decorators/: __init__.py  specify.py  utility.py
tests/: General.py  example.py  fail.txt  general.py  test_asserts.py  tests.csv  tests.txt
tests/Exceptions/: Types.py
tests/Experimental_TED/: exception.py  formatting.py  markup.py  parser.py  random.py  tokens.py
tests/TED/: runner.py  test_colors.py  test_func.py  test_hlinks.py  test_links.py
tests/UnitTest/: test_Asserts.py  test_Test.py
tests/output/: tests.csv  tests.json  tests.txt
(+43 files in other folders)
