[tool.poetry]
name = "TEDDecor"
version = "0.1.0"
description = "This is a easy to use library with testing, documentation, and docstring example tools. Dive in with minimal effort and get great results."
authors = ["Tired-Fox <zboehm104@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
