[tool.poetry]
authors = ["Tired-Fox <zboehm104@gmail.com>"]
description = "This is a easy to use library with testing, documentation, and docstring example tools. Dive in with minimal effort and get great results."
license = "MIT"
name = "TEDDecor"
version = "1.1.0"

[tool.poetry.dependencies]
python = ">=3.7"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
TEDTest = "teddecor.UnitTest.TEDTest:main"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
